WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273273
Non-unified build fixes, early May 2024 edition
https://bugs.webkit.org/show_bug.cgi?id=273273
Summary
Non-unified build fixes, early May 2024 edition
Don Olmstead
Reported
2024-04-25 14:19:37 PDT
....
Attachments
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2024-04-25 14:25:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27761
Don Olmstead
Comment 2
2024-05-02 14:03:18 PDT
Its gonna be May
Radar WebKit Bug Importer
Comment 3
2024-05-02 14:21:59 PDT
<
rdar://problem/127454785
>
EWS
Comment 4
2024-05-02 21:24:47 PDT
Committed
278302@main
(1492af7e4abe): <
https://commits.webkit.org/278302@main
> Reviewed commits have been landed. Closing PR #27761 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug