Non-unified build fixes, early May 2024 edition https://bugs.webkit.org/show_bug.cgi?id=273273

Unreviewed non-unified build fix.

Fixing non-unified build for PlayStation.

* Source/JavaScriptCore/jit/ExecutableAllocator.cpp:
* Source/JavaScriptCore/runtime/JSCBytecodeCacheVersion.cpp:
* Source/WebCore/bindings/js/DOMWrapperWorld.cpp:
* Source/WebCore/crypto/algorithms/CryptoAlgorithmHKDF.cpp:
* Source/WebCore/crypto/algorithms/CryptoAlgorithmHMAC.cpp:
* Source/WebCore/dom/WindowEventLoop.cpp:
* Source/WebCore/layout/FormattingState.cpp:
* Source/WebCore/layout/Verification.cpp:
* Source/WebCore/layout/floats/FloatAvoider.cpp:
* Source/WebCore/layout/formattingContexts/block/BlockFormattingState.cpp:
* Source/WebCore/layout/formattingContexts/block/tablewrapper/TableWrapperBlockFormattingContext.cpp:
* Source/WebCore/layout/formattingContexts/block/tablewrapper/TableWrapperBlockFormattingQuirks.cpp:
* Source/WebCore/layout/formattingContexts/inline/InlineItem.cpp:
* Source/WebCore/layout/formattingContexts/table/TableFormattingState.cpp:
* Source/WebCore/layout/formattingContexts/table/TableGrid.cpp:
* Source/WebCore/layout/integration/LayoutIntegrationBoxTree.cpp:
* Source/WebCore/layout/layouttree/LayoutInitialContainingBlock.cpp:
* Source/WebCore/layout/layouttree/LayoutInlineTextBox.cpp:
* Source/WebCore/page/ElementTargetingController.cpp:
* Source/WebCore/page/ElementTargetingController.h:
* Source/WebCore/platform/graphics/FontCascadeDescription.cpp:
* Source/WebCore/platform/graphics/PixelFormatValidated.cpp:
* Source/WebCore/svg/properties/SVGSharedPrimitiveProperty.h:
* Source/WebCore/xml/parser/XMLDocumentParserScope.cpp:
* Source/WebCore/xml/parser/XMLDocumentParserScope.h:
* Source/WebKit/UIProcess/API/APITargetedElementRequest.cpp:
(API::TargetedElementRequest::makeRequest const):
* Source/WebKit/UIProcess/API/APITargetedElementRequest.h:

Canonical link: https://commits.webkit.org/278302@main