Source/JavaScriptCore/jit/ExecutableAllocator.cpp
@@ -157,8 +157,10 @@ static_assert(fixedExecutableMemoryPoolSize * executablePoolReservationFraction 
 static_assert(fixedExecutableMemoryPoolSize < 4 * GB, "ExecutableMemoryHandle assumes it is less than 4GB");
 #endif
 
+#if HAVE(KDEBUG_H)
 // 325696c8-e7cc-11ee-9f4e-325096b39f47
 static constexpr WTF::UUID jscJITNamespace { static_cast<UInt128>(0x325696c8e7cc11eeULL) << 64 | (0x9f4e325096b39f47ULL) };
+#endif
 
 static bool isJITEnabled()
 {
