Source/WebCore/layout/formattingContexts/table/TableGrid.cpp
@@ -26,6 +26,7 @@
 #include "config.h"
 #include "TableGrid.h"
 
+#include "RenderObject.h"
 #include <wtf/IsoMallocInlines.h>
 
 namespace WebCore {
